--- a/gmall-list-service/src/main/resources/application.properties
+++ b/gmall-list-service/src/main/resources/application.properties
@@ -1,23 +1,21 @@
-server.port=8083
-# \u65E5\u5FD7\u7EA7\u522B
-logging.level.root=debug
-#dubbo
-spring.dubbo.application.name=manage-service
+server.port=8085
+logging.level.root=error
+spring.dubbo.application.name=list-service
 spring.dubbo.registry.protocol=zookeeper
 spring.dubbo.registry.address=192.168.197.233:2181
 spring.dubbo.base-package=com.atguigu.gmall0715
 spring.dubbo.protocol.name=dubbo
-# mysql
 spring.datasource.url=jdbc:mysql://localhost:3306/gmall?characterEncoding=UTF-8
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
-#mybatis\u8BBE\u7F6E
+#mybatis
 mybatis.mapper-locations=classpath:mapper/*Mapper.xml
-#\u9A7C\u5CF0\u8F6C\u6362
 mybatis.configuration.mapUnderscoreToCamelCase=true
 
-#redis\u8BBE\u7F6E
-spring.redis.host= 192.168.197.233
+# redis
+spring.redis.host=192.168.197.233
 spring.redis.port=6379
+spring.redis.database=0
+
+spring.elasticsearch.jest.uris=http://192.168.197.233:9200
